--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -16,7 +16,7 @@ jobs:
 
       # Step 2: Set up JDK
       - name: Set up JDK 21
-        uses: actions/checkout@v4
+        uses: actions/setup-java@v4
         with:
           java-version: '21' # Adjust this to the JDK version your project requires
           distribution: 'temurin' # Choose the JDK distribution (temurin, zulu, etc.)
