--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -5,22 +5,66 @@ on:
     branches:
       - main
 
+env:
+  RUNNER_ROLE_ARN: arn:aws:iam::817667413626:role/GitHubRunner
+  REGION: ap-southeast-1
+  ECR_URI: 817667413626.dkr.ecr.ap-southeast-1.amazonaws.com/test
+
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      # Step 1: Check out the code
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-      # Step 2: Set up JDK
+      - name: Set Tag
+        run: echo "release_tag=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Set Short SHA
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21' # Adjust this to the JDK version your project requires
           distribution: 'temurin' # Choose the JDK distribution (temurin, zulu, etc.)
-#          cache: 'maven'
+          cache: 'maven'
 
       - name: Run test
         run: ./mvnw test
+
+      - name: Create Jar file
+        run: ./mvnw package -Dmaven.test.skip
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ env.RUNNER_ROLE_ARN }}
+          role-session-name: github-runner
+          aws-region: ${{ env.REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          platforms: linux/amd64
+          push: true
+          context: .
+          no-cache: true
+          tags: ${{ env.ECR_URI }}:${{ env.sha_short }}
