--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -37,34 +37,42 @@ jobs:
           distribution: 'temurin' # Choose the JDK distribution (temurin, zulu, etc.)
           cache: 'maven'
 
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Run test
         run: ./mvnw test
 
       - name: Create Jar file
         run: ./mvnw package -Dmaven.test.skip
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ env.RUNNER_ROLE_ARN }}
-          role-session-name: github-runner
-          aws-region: ${{ env.REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          platforms: linux/amd64
-          push: true
-          context: .
-          no-cache: true
-          tags: ${{ env.ECR_URI }}:${{ env.sha_short }}
+#      - name: Configure AWS Credentials
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          role-to-assume: ${{ env.RUNNER_ROLE_ARN }}
+#          role-session-name: github-runner
+#          aws-region: ${{ env.REGION }}
+#
+#      - name: Login to Amazon ECR
+#        id: login-ecr
+#        uses: aws-actions/amazon-ecr-login@v2
+#
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v3
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#
+#      - name: Build and push
+#        uses: docker/build-push-action@v3
+#        with:
+#          platforms: linux/amd64
+#          push: true
+#          context: .
+#          no-cache: true
+#          tags: ${{ env.ECR_URI }}:${{ env.sha_short }}
