--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -38,12 +38,10 @@ jobs:
           cache: 'maven'
 
       - name: Cache local Maven repository
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          key: ${{ hashFiles('**/pom.xml') }}
 
       - name: Run test
         run: ./mvnw test
