--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -46,8 +46,8 @@ jobs:
       - name: Run test
         run: ./mvnw test
 
-      - name: Create Jar file
-        run: ./mvnw package -Dmaven.test.skip
+#      - name: Create Jar file
+#        run: ./mvnw package -Dmaven.test.skip
 
 #      - name: Configure AWS Credentials
 #        uses: aws-actions/configure-aws-credentials@v4
