--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   Build:
     uses: phu-ng/cicd-scripts/.github/workflows/build.yml@main
