--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,14 +1,14 @@
-name: Build Workflow
-
-on:
-  push:
-    branches:
-      - main
-
-permissions:
-  id-token: write
-  contents: read
-
-jobs:
-  dev:
-    uses: phu-ng/cicd-scripts/.github/workflows/build.yml@main
+#name: Build Workflow
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#permissions:
+#  id-token: write
+#  contents: read
+#
+#jobs:
+#  dev:
+#    uses: phu-ng/cicd-scripts/.github/workflows/build.yml@main
