--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,14 +1,15 @@
-#name: Build Workflow
-#
-#on:
+name: Build Workflow
+
+on:
+  workflow_dispatch:  # This triggers the workflow manually from GitHub UI
 #  push:
 #    branches:
 #      - main
-#
-#permissions:
-#  id-token: write
-#  contents: read
-#
-#jobs:
-#  dev:
-#    uses: phu-ng/cicd-scripts/.github/workflows/build.yml@main
+
+permissions:
+  id-token: write
+  contents: read
+
+jobs:
+  dev:
+    uses: phu-ng/cicd-scripts/.github/workflows/build.yml@main
