--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -34,6 +34,9 @@ jobs:
           path: ~/.m2/repository
           key: ${{ hashFiles('**/pom.xml') }}
 
+      - name: Compile code
+        run: ./mvnw compile -Dmaven.test.skip
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
