--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -34,15 +34,13 @@ jobs:
           path: ~/.m2/repository
           key: ${{ hashFiles('**/pom.xml') }}
 
-      - name: test
-        run: echo ${{ github.workspace }}
-#      - name: Initialize CodeQL
-#        uses: github/codeql-action/init@v3
-#        with:
-#          languages: java
-#
-#      - name: Compile code
-#        run: ./mvnw compile -Dmaven.test.skip
-#
-#      - name: Perform CodeQL Analysis
-#        uses: github/codeql-action/analyze@v3
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java
+
+      - name: Compile code
+        run: ./mvnw compile -Dmaven.test.skip
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
